--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,21 +1,10 @@
-<header>
-  <div class="header-logo">
-    <a href="/">TweetApp</a>
-  </div>
-  <ul class="header-menus">
-    <li>
-      <a href="/about">TweetAppとは</a>
-    </li>
-  </ul>
-</header>
-
 <div class="main posts-index">
   <div class="container">
-    <div class="posts-index-item">
-      今日からProgateでRailsの勉強するよー!
-    </div>
-    <div class="posts-index-item">
-      投稿一覧ページ作成中！
-    </div>
+    <% @posts.each do |post| %>
+      <div class="posts-index-item">
+        <!-- 以下をlink_toメソッドを用いて書き換えてください -->
+        <%= link_to(post.content, "/posts/#{post.id}") %>
+      </div>
+    <% end %>
   </div>
 </div>
