--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,24 @@
   </head>
 
   <body>
+
+    <header>
+      <div class="header-logo">
+        <a href="/">TweetApp</a>
+      </div>
+      <ul class="header-menus">
+        <li>
+          <a href="/about">TweetAppとは</a>
+        </li>
+        <li>
+          <%= link_to("投稿一覧", "/posts/index") %>
+        </li>
+        <li>
+          <%= link_to("新規投稿", "/posts/new") %>
+        </li>
+      </ul>
+    </header>
+
     <%= yield %>
   </body>
 </html>
