progate8まで(画像アップロードとログイン機能)

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -9,7 +9,7 @@
       </div>
       <div class="post-menus">
         <%= link_to("編集", "/posts/#{@post.id}/edit") %>
-        <%= link_to "削除", "/posts/#{@post.id}/destroy", data: { turbo_method: :post } %>
+        <%= link_to("削除", "/posts/#{@post.id}/destroy", data: { turbo_method: :delete }) %>
       </div>
     </div>
   </div>
