--- a/app/views/users/likes.html.erb
+++ b/app/views/users/likes.html.erb
@@ -10,10 +10,15 @@
     </div>
 
     <ul class="user-tabs">
-      <li class="active"><%= link_to("投稿", "/users/#{@user.id}") %></li>
-      <li><%= link_to("いいね!", "/users/#{@user.id}/likes") %></li>
+      <li><%= link_to("投稿", "/users/#{@user.id}") %></li>
+      <li class="active"><%= link_to("いいね!", "/users/#{@user.id}/likes") %></li>
     </ul>
-    <% @user.posts.each do |post| %>
+
+    <!-- 変数@likesに対してeach文を用いてください -->
+    <% @likes.each do |like|%>
+      <!-- 変数postを定義してください -->
+      <% post = Post.find_by(id: like.post_id)%>
+
       <div class="posts-index-item">
         <div class="post-left">
           <img src="<%= "/user_images/#{post.user.image_name}" %>">
@@ -25,6 +30,7 @@
           <%= link_to(post.content, "/posts/#{post.id}") %>
         </div>
       </div>
+    <!-- each文のendを追加してください -->
     <% end %>
   </div>
 </div>
